[project]
name = "yap_my_classes"
version = "0.1.0"
description = "A Matrix server for anonymously communicating with UB classmates in each class section"
authors = [{ name = "ok-nick", email = "nick.libraries@gmail.com" }]
requires-python = ">3.11.4"
# technically this isn't a dependency
# dependencies = ["matrix-synapse==1.95.1"]

[tool.pyright]
typeCheckingMode = "basic"

[tool.ruff]
fixable = ["ALL"]
extend-select = ["I"]
